cractus-fp/test-logs/b7814cac5c55b7560a5dcac94409bf165f9c22bd/cractus-withfp-opt-id.log
#####
cractus-withfp-opt-id - Run 1
2024-02-22 04:11:40
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

#####
cractus-withfp-opt-id - Run 2
2024-02-22 04:11:44
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

#####
cractus-withfp-opt-id - Run 3
2024-02-22 04:11:47
#####
  File "/home/ubuntu/.phoronix-test-suite/installed-tests/system/selenium-top-sites-1.0.3/./run-benchmark.py", line 26
    self.driver = webdriver.()
                            ^
SyntaxError: invalid syntax

